--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     <nav>
         <div class="container">
             <div class="logo">RescueOne</div>
-            <span class="nav-toggle" onclick="document.querySelector('nav ul').classList.toggle('active')">&#9776;</span>
+            <span class="nav-toggle" onclick="document.querySelector('nav ul').classList.toggle('active')">☰</span>
             <ul>
                 <li><a href="./index.html" class="active">Home</a></li>
                 <li><a href="./about.html">About</a></li>
