--- a/volunteer_registration.html
+++ b/volunteer_registration.html
@@ -51,6 +51,7 @@
         }
         nav a.active {
             font-weight: bold;
+            border-bottom: 2px solid #bfdbfe;
         }
         .nav-toggle {
             display: none;
@@ -71,12 +72,12 @@
             max-width: 600px;
             margin: 0 auto;
             background-color: white;
-            padding: 24px;
+            padding: 32px;
             border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
         }
         .form-group {
-            margin-bottom: 16px;
+            margin-bottom: 20px;
         }
         label {
             display: block;
@@ -90,28 +91,32 @@
         }
         input, select, textarea {
             width: 100%;
-            padding: 8px;
+            padding: 12px;
             border: 1px solid #d1d5db;
             border-radius: 6px;
             font-size: 16px;
+            transition: border-color 0.3s, box-shadow 0.3s;
         }
         input:focus, select:focus, textarea:focus {
             outline: none;
-            border-color: #4f46e5;
+            border-color: #1d4ed8;
+            box-shadow: 0 0 0 3px rgba(29, 78, 216, 0.1);
         }
         textarea {
             resize: vertical;
-            min-height: 80px;
+            min-height: 100px;
         }
         .checkbox-group {
-            display: flex;
-            gap: 16px;
-            flex-wrap: wrap;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            gap: 12px;
         }
         .checkbox-group label {
             font-weight: normal;
             display: flex;
             align-items: center;
+            font-size: 14px;
+            color: #4b5563;
         }
         .checkbox-group input {
             width: auto;
@@ -121,11 +126,13 @@
             width: 100%;
             background-color: #1d4ed8;
             color: white;
-            padding: 12px;
+            padding: 14px;
             border: none;
             border-radius: 6px;
             font-size: 16px;
+            font-weight: bold;
             cursor: pointer;
+            transition: background-color 0.3s;
         }
         button:hover {
             background-color: #1e40af;
@@ -134,6 +141,7 @@
             background-color: #1f2937;
             color: white;
             padding: 32px 0;
+            margin-top: auto;
         }
         footer .container {
             display: grid;
@@ -151,6 +159,7 @@
         footer a {
             color: #d1d5db;
             text-decoration: none;
+            transition: color 0.3s;
         }
         footer a:hover {
             color: white;
@@ -172,6 +181,7 @@
             padding-top: 16px;
             text-align: center;
             color: #9ca3af;
+            font-size: 14px;
         }
         @media (max-width: 768px) {
             nav ul {
@@ -191,7 +201,13 @@
                 display: block;
             }
             .form-container {
-                padding: 16px;
+                padding: 24px;
+            }
+            h1 {
+                font-size: 24px;
+            }
+            .checkbox-group {
+                grid-template-columns: 1fr;
             }
         }
     </style>
@@ -200,7 +216,7 @@
     <nav>
         <div class="container">
             <div class="logo">RescueOne</div>
-            <span class="nav-toggle" onclick="document.querySelector('nav ul').classList.toggle('active')">&#9776;</span>
+            <span class="nav-toggle" onclick="document.querySelector('nav ul').classList.toggle('active')">☰</span>
             <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./about.html">About</a></li>
@@ -214,48 +230,50 @@
         </div>
     </nav>
     <main>
-        <h1>Volunteer Registration</h1>
-        <div class="form-container">
-            <form action="#">
+        <h1>Become a Volunteer</h1>
+        <div class="form-container" role="form" aria-labelledby="volunteer-form">
+            <form action="#" method="post">
                 <div class="form-group">
                     <label for="name">Full Name <span class="required">*</span></label>
-                    <input type="text" id="name" name="name" required placeholder="Enter your name">
+                    <input type="text" id="name" name="name" required placeholder="Enter your full name" aria-required="true">
                 </div>
                 <div class="form-group">
-                    <label for="email">Email <span class="required">*</span></label>
-                    <input type="email" id="email" name="email" required placeholder="Enter your email">
+                    <label for="email">Email Address <span class="required">*</span></label>
+                    <input type="email" id="email" name="email" required placeholder="Enter your email" aria-required="true">
                 </div>
                 <div class="form-group">
                     <label for="phone">Phone Number <span class="required">*</span></label>
-                    <input type="tel" id="phone" name="phone" required placeholder="Enter your phone">
+                    <input type="tel" id="phone" name="phone" required placeholder="Enter your phone number" aria-required="true">
                 </div>
                 <div class="form-group">
                     <label for="location">Location <span class="required">*</span></label>
-                    <input type="text" id="location" name="location" required placeholder="Enter your city">
+                    <input type="text" id="location" name="location" required placeholder="Enter your city or region" aria-required="true">
                 </div>
                 <div class="form-group">
                     <label for="availability">Availability <span class="required">*</span></label>
-                    <select id="availability" name="availability" required>
+                    <select id="availability" name="availability" required aria-required="true">
                         <option value="">Select availability</option>
                         <option value="full-time">Full-time</option>
                         <option value="part-time">Part-time</option>
                         <option value="weekends">Weekends</option>
+                        <option value="on-call">On-call</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label>Skills <span class="required">*</span></label>
-                    <div class="checkbox-group">
-                        <label><input type="checkbox" name="skills" value="medical"> Medical</label>
+                    <label>Skills and Expertise <span class="required">*</span></label>
+                    <div class="checkbox-group" role="group" aria-label="Select your skills">
+                        <label><input type="checkbox" name="skills" value="medical" required aria-required="true"> Medical</label>
                         <label><input type="checkbox" name="skills" value="logistics"> Logistics</label>
                         <label><input type="checkbox" name="skills" value="communication"> Communication</label>
                         <label><input type="checkbox" name="skills" value="construction"> Construction</label>
+                        <label><input type="checkbox" name="skills" value="counseling"> Counseling</label>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="experience">Previous Experience</label>
-                    <textarea id="experience" name="experience" placeholder="Describe experience"></textarea>
+                    <label for="experience">Previous Volunteer Experience</label>
+                    <textarea id="experience" name="experience" placeholder="Describe any relevant experience (optional)"></textarea>
                 </div>
-                <button type="submit">Register</button>
+                <button type="submit">Register as Volunteer</button>
             </form>
         </div>
     </main>
@@ -278,7 +296,7 @@
             </div>
             <div>
                 <h3>Contact Us</h3>
-                <ul class="contact">
+            <ul class="contact">
                     <li>Email: contact@rescueone.org</li>
                     <li>Phone: +1 (555) 123-4567</li>
                     <li>Address: 123 Disaster Way, Relief City</li>
